Refactor project structure and enhance karaoke song search features
- Migrated project from Solid.js to Astro framework for improved performance and static site generation.
- Removed outdated files including index.html and vite.config.ts, and added new Astro configuration in astro.config.mjs.
- Updated package.json scripts to align with Astro commands and added necessary dependencies for Astro, Solid.js, and UnoCSS.
- Enhanced .gitignore to exclude unnecessary files and added support for Astro-specific files.
- Improved README.md to reflect new project structure and features.
- Introduced new components for search interface and song details, enhancing user experience with dynamic content loading.
- Implemented internationalization support with a new language switcher and updated translation handling.
- Refined data structures for songs and artists to support aliases and hidden entries for better search functionality.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build site
-        run: pnpm run build:ssg
+        run: pnpm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
