--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
 dist
-.wrangler
-.output
-.vercel
-.netlify
-.vinxi
-app.config.timestamp_*.js
 
 # Environment
 .env
@@ -26,3 +20,6 @@ gitignore
 # System Files
 .DS_Store
 Thumbs.db
+
+# Astro
+.astro
