--- a/package.json
+++ b/package.json
@@ -4,26 +4,30 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "build:ssg": "tsx scripts/build-ssg.ts",
-    "serve": "vite preview"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.2",
     "fs-extra": "^11.2.0",
+    "jsdom": "^26.1.0",
     "tsx": "^4.19.2",
     "unocss": "^66.3.2",
-    "vite": "^6.0.0",
-    "vite-plugin-pages": "^0.32.4",
-    "vite-plugin-solid": "^2.11.6"
+    "vite": "^5.4.19"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.4.1",
+    "@astrojs/solid-js": "^5.1.0",
     "@floating-ui/dom": "^1.7.2",
-    "@solidjs/router": "^0.15.1",
+    "@unocss/reset": "^66.3.2",
+    "astro": "^5.10.2",
+    "astro-i18next": "1.0.0-beta.21",
     "fuse.js": "^7.0.0",
-    "solid-js": "^1.9.5"
+    "solid-js": "^1.9.7"
   }
 }
