--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "search": "tsx scripts/karaoke-search-cli-refactored.ts"
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/cheerio": "^1.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.2",
+    "chalk": "^5.4.1",
+    "cheerio": "^1.1.0",
     "fs-extra": "^11.2.0",
     "jsdom": "^26.1.0",
     "tsx": "^4.19.2",
+    "undici": "^7.11.0",
     "unocss": "^66.3.2",
     "vite": "^5.4.19"
   },
