Refactor project structure and enhance karaoke song search features
- Updated the .gitignore file to include additional dependencies and build outputs for improved project management.
- Renamed the project from "vite-template-solid" to "imakaraokay" and updated package.json to reflect the new name and private status.
- Introduced a pnpm workspace configuration to manage multiple packages within the monorepo.
- Enhanced TypeScript configuration for better module resolution and path handling.
- Added shared utilities and types for karaoke data in a new package, improving code organization and reusability.
- Implemented a new search interface and artist profile pages, enhancing user experience with dynamic content loading and localization support.
- Updated README.md to provide clearer project descriptions and installation instructions.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,35 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2022",
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["vite/client"],
-    "noEmit": true,
-    "isolatedModules": true
-  }
-}
+    
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    
+    "baseUrl": ".",
+    "paths": {
+      "@imakaraokay/shared": ["./packages/shared/src"],
+      "@imakaraokay/shared/*": ["./packages/shared/src/*"]
+    }
+  },
+  "references": [
+    { "path": "./services/website" },
+    { "path": "./tools/cli" },
+    { "path": "./packages/shared" }
+  ]
+} 
