--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,76 @@
-dist
+# Dependencies
+node_modules/
+.pnpm-store/
 
-# Environment
+# Build outputs
+dist/
+build/
+.astro/
+
+# Environment files
 .env
-.env*.local
+.env.local
+.env.production
+.env.staging
 
-# dependencies
-/node_modules
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-*.launch
-.settings/
-
-# Temp
-gitignore
-
-# System Files
+# OS
 .DS_Store
 Thumbs.db
 
-# Astro
-.astro
+# Logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# TypeScript
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# Temporary folders
+tmp/
+temp/
