--- a/package.json
+++ b/package.json
@@ -1,38 +1,20 @@
 {
-  "name": "vite-template-solid",
+  "name": "imakaraokay",
   "version": "0.0.0",
-  "description": "",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro",
-    "search": "tsx scripts/karaoke-search-cli-refactored.ts"
+    "dev": "pnpm -F website dev",
+    "build": "pnpm -F website build",
+    "preview": "pnpm -F website preview",
+    "search": "pnpm -F cli search",
+    "build:all": "pnpm -r build",
+    "dev:all": "pnpm -r dev",
+    "clean": "pnpm -r clean && rm -rf node_modules",
+    "install:all": "pnpm install",
+    "lint": "pnpm -r lint",
+    "type-check": "pnpm -r type-check"
   },
-  "license": "MIT",
   "devDependencies": {
-    "@types/cheerio": "^1.0.0",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.10.2",
-    "chalk": "^5.4.1",
-    "cheerio": "^1.1.0",
-    "fs-extra": "^11.2.0",
-    "jsdom": "^26.1.0",
-    "tsx": "^4.19.2",
-    "undici": "^7.11.0",
-    "unocss": "^66.3.2",
-    "vite": "^5.4.19"
   },
-  "dependencies": {
-    "@astrojs/sitemap": "^3.4.1",
-    "@astrojs/solid-js": "^5.1.0",
-    "@floating-ui/dom": "^1.7.2",
-    "@unocss/reset": "^66.3.2",
-    "astro": "^5.10.2",
-    "astro-i18next": "1.0.0-beta.21",
-    "fuse.js": "^7.0.0",
-    "solid-js": "^1.9.7"
-  }
-}
+  "packageManager": "pnpm@9.0.0"
+} 
