--- a/services/website/package.json
+++ b/services/website/package.json
@@ -21,6 +21,7 @@
     "@unocss/reset": "^66.3.2",
     "astro": "^5.10.2",
     "astro-i18next": "1.0.0-beta.21",
+    "cheerio": "^1.1.0",
     "fuse.js": "^7.0.0",
     "solid-js": "^1.9.7"
   },
