--- a/tools/cli/package.json
+++ b/tools/cli/package.json
@@ -17,6 +17,7 @@
     "chalk": "^5.4.1",
     "cheerio": "^1.1.0",
     "fs-extra": "^11.2.0",
+    "google-sr": "^5.0.0",
     "jsdom": "^26.1.0",
     "undici": "^7.11.0"
   },
@@ -38,4 +39,4 @@
   ],
   "author": "RanolP",
   "license": "MIT"
-} 
+}
