--- a/services/website/package.json
+++ b/services/website/package.json
@@ -14,6 +14,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@astrojs/node": "^9.3.0",
     "@astrojs/sitemap": "^3.4.1",
     "@astrojs/solid-js": "^5.1.0",
     "@floating-ui/dom": "^1.7.2",
@@ -21,11 +22,19 @@
     "@unocss/reset": "^66.3.2",
     "astro": "^5.10.2",
     "astro-i18next": "1.0.0-beta.21",
+    "chalk": "^5.4.1",
     "cheerio": "^1.1.0",
+    "fs-extra": "^11.2.0",
     "fuse.js": "^7.0.0",
-    "solid-js": "^1.9.7"
+    "google-sr": "^5.0.0",
+    "jsdom": "^26.1.0",
+    "solid-js": "^1.9.7",
+    "undici": "^7.11.0"
   },
   "devDependencies": {
+    "@types/cheerio": "^1.0.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.2",
     "typescript": "^5.7.2",
     "unocss": "^66.3.2",
