--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "description": "Shared utilities and types for imakaraokay",
   "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./src/index.ts",
+      "types": "./src/index.ts"
     },
     "./types": {
-      "import": "./dist/types.js",
-      "types": "./dist/types.d.ts"
+      "import": "./src/types.ts",
+      "types": "./src/types.ts"
     }
   },
   "scripts": {
@@ -21,8 +21,15 @@
     "type-check": "tsc --noEmit",
     "clean": "rm -rf dist"
   },
+  "dependencies": {
+    "chalk": "^5.4.1",
+    "cheerio": "^1.1.0",
+    "google-sr": "^5.0.0",
+    "undici": "^7.11.0"
+  },
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "@types/cheerio": "^1.0.0",
     "typescript": "^5.7.2"
   },
   "keywords": [
