--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -14,7 +14,10 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "noEmit": false,
+    "emitDeclarationOnly": false,
+    "allowImportingTsExtensions": false
   },
   "include": [
     "src/**/*.ts"
