Enhance build process and artist data management
- Updated package.json to integrate tsdown for building and development scripts, improving build efficiency.
- Added tsdown configuration files for shared package, enabling workspace mode and common settings for multiple packages.
- Refactored artist data structure by removing song-related fields from JSON files and dynamically computing song data in the API.
- Improved AdminInterface by removing song management functionality, streamlining the artist form for better user experience.
- Implemented new functions in the API to load and enrich artist data with associated songs, enhancing data integrity and retrieval.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "pnpm -F website dev",
     "build": "pnpm -F website build",
     "preview": "pnpm -F website preview",
-    "build:all": "pnpm -r build",
+    "build:all": "tsdown && pnpm -F website build",
+    "build:libs": "tsdown",
+    "dev:libs": "tsdown --watch",
     "dev:all": "pnpm -r dev",
     "clean": "pnpm -r clean && rm -rf node_modules",
     "install:all": "pnpm install",
@@ -14,6 +16,7 @@
     "type-check": "pnpm -r type-check"
   },
   "devDependencies": {
+    "tsdown": "^0.12.9"
   },
   "packageManager": "pnpm@9.0.0"
-} 
+}
