--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -31,6 +31,7 @@
     "build": "tsdown",
     "dev": "tsdown --watch",
     "type-check": "tsc --noEmit",
+    "lint": "echo 'No linting configured for shared package'",
     "clean": "rm -rf dist"
   },
   "dependencies": {
