Refactor utaitai package structure and enhance testing capabilities
- Updated package.json to include new linting and formatting scripts using biome, improving code quality and consistency.
- Added Vitest for testing, with new test scripts for UI and general execution.
- Introduced vitest.config.ts for configuring test environment and coverage reporting.
- Removed unused types and utility files to streamline the package structure.
- Implemented search functionality in tj.ts with comprehensive tests in tj.test.ts, enhancing the library's capabilities for searching Korean songs.

--- a/packages/utaitai/package.json
+++ b/packages/utaitai/package.json
@@ -15,13 +15,24 @@
     "build": "tsdown",
     "dev": "tsdown --watch",
     "type-check": "tsc --noEmit",
-    "lint": "echo 'No linting configured for utaitai package'",
-    "clean": "rm -rf dist"
+    "lint": "biome check src/",
+    "lint:fix": "biome check --write src/",
+    "format": "biome format src/",
+    "format:fix": "biome format --write src/",
+    "clean": "rm -rf dist",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run"
   },
-  "dependencies": {},
+  "dependencies": {
+    "cheerio": "^1.1.0",
+    "ky": "^1.8.1"
+  },
   "devDependencies": {
     "@types/node": "^22.10.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.6",
+    "@vitest/ui": "^2.1.6"
   },
   "keywords": [
     "karaoke",
@@ -30,4 +41,4 @@
   ],
   "author": "RanolP",
   "license": "MIT"
-} 
+}
