--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "clean": "turbo run clean && rm -rf node_modules",
     "install:all": "pnpm install",
     "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
+    "format": "turbo run format",
+    "format:fix": "turbo run format:fix",
     "type-check": "turbo run type-check"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.0.6",
     "tsdown": "^0.12.9",
     "turbo": "^2.5.4"
   },
