--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -38,6 +38,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@imakaraokay/utaitai": "workspace:*",
     "chalk": "^5.4.1",
     "cheerio": "^1.1.0",
     "google-sr": "^5.0.0",
