Refactor TypeScript configuration files for consistency and clarity
- Streamlined the formatting of `tsconfig.json` files across multiple packages, ensuring consistent structure and readability.
- Removed unnecessary whitespace and adjusted the placement of properties for improved clarity.
- Updated import statements in various provider files to use `import type` for better type handling and clarity.
- Enhanced the overall organization of the codebase by ensuring consistent formatting practices throughout the project.

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -19,11 +19,6 @@
     "emitDeclarationOnly": false,
     "allowImportingTsExtensions": false
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
-} 
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
+}
