--- a/packages/utaitai/tsconfig.json
+++ b/packages/utaitai/tsconfig.json
@@ -19,11 +19,6 @@
     "emitDeclarationOnly": false,
     "allowImportingTsExtensions": false
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
-} 
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
+}
