--- a/packages/utaitai/package.json
+++ b/packages/utaitai/package.json
@@ -26,13 +26,14 @@
   },
   "dependencies": {
     "cheerio": "^1.1.0",
+    "google-sr": "^5.0.0",
     "ky": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "@vitest/ui": "^2.1.6",
     "typescript": "^5.7.2",
-    "vitest": "^2.1.6",
-    "@vitest/ui": "^2.1.6"
+    "vitest": "^2.1.6"
   },
   "keywords": [
     "karaoke",
